<resources>
    <string name="app_name">MyHealingPet</string>
    <string name="login">아이디:</string>
    <string name="login_ok">로그인</string>
    <string name="cancel">뒤로</string>
    <string name="pwd">비밀번호:</string>
    <string name="signup">회원가입</string>
    <string name="saveData">데이터 저장하기</string>
    <string name="loadData">데이터 불러오기</string>
    <string name="confirm">확인</string>
    <string name="dupCheck">중복확인</string>
    <string name="pwdCheck">비밀번호 확인:</string>
</resources>
