<?xml version="1.0" encoding="utf-8"?>
<!-- 로그인화면 -->
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="3"
    android:paddingTop="50px">

    <TableRow>
        <TextView
            android:text="@string/login"
            android:padding="10px"
            />
        <EditText android:id="@+id/entryId"
            android:layout_span="3"
            android:padding="10px"
            android:autoText="false"
            />
    </TableRow>

    <TableRow android:layout_marginTop = "20px">
        <TextView
            android:text="@string/pwd"
            android:padding="10px"
            />
        <EditText android:id="@+id/pwd"
            android:layout_span="3"
            android:padding="10px"
            android:autoText="false"
            android:inputType="textPassword"
            />
    </TableRow>

    <TableRow android:layout_marginTop = "15px">
        <Button android:text="@string/login_ok"
            android:id="@+id/login_ok"
            android:onClick="onLoginOkButtonClicked" />

        <Button android:text="@string/signup"
            android:id="@+id/signup"
            android:onClick="onSignUpButtonClicked" />

        <Button android:text="@string/cancel"
            android:id="@+id/cancel"
            android:onClick="onCancelButtonClicked" />
    </TableRow>

</TableLayout>